--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/e0ca45ab7d.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -15,7 +16,7 @@
 
             <div id="bloco-envolve">
                 
-                <div id="bloco-tudo-form" class="z-depth-3">
+                <div id="bloco-tudo-form" class=" shadow-lg">
                     <div class="bloco-form">
                         <img id="logo" src="fotos/logo.jpg" alt="">
                         <section id="formulario">
@@ -90,7 +91,7 @@
                         </section>
                 </div>
 
-                <div id="bloco-tudo-email">
+                <div id="bloco-tudo-email" class="shadow-lg border">
                     <img src="fotos/Partecima.jpg" alt="">
                     <div style="user-select: all;" class="assinatura">
                        <img id="IsisCima" src="fotos/isis parte de cima.jpg" alt="">
@@ -103,7 +104,10 @@
                               <p>Departamento</p>
                               <p>Telefone: <span>5165135</span></p>
                               <p>Email: <span>51351</span></p>
-                              <p><span>facebook</span>|<span>Instagram</span>|<span>linkedin</span></p>
+                              <p>
+                                  <span></span><i class="fab fa-facebook-square"></i></span>|
+                                  <span><i class="fab fa-instagram-square"></i></span>|
+                                  <span><i class="fab fa-linkedin"></i></span></p>
                           </section>
                        </div>
 
