adionando funcionalidades com js

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <script src="https://cdn.ckeditor.com/4.14.0/standard/ckeditor.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://rawcdn.githack.com/zenorocha/clipboard.js/v2.0.6/dist/clipboard.min.js"></script>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/e0ca45ab7d.js" crossorigin="anonymous"></script>
 </head>
@@ -26,20 +29,25 @@
                                     <input type="text" class="form-control" id="nome" placeholder="Nome Completo">
                                 </div>
 
+                                <div class="form-group">
+                                    <label for="exampleFormControlFile1">Foto</label>
+                                    <input type="file" class="form-control-file" id="imagem"  onchange="previewImagem()">
+                                </div>
+
                                 <div class="form-row">
                                     <div class="form-group col-md-7">
-                                    <label for="email">Departamento</label>
-                                    <input type="email" class="form-control" id="email" placeholder="Email">
+                                    <label for="departamento">Departamento</label>
+                                    <input type="email" class="form-control" id="departamento" placeholder="Departamento">
                                     </div>
                                     <div class="form-group col-md-5">
-                                    <label for="tel">Telefone</label>
-                                    <input type="tel" class="form-control" id="tel" placeholder="telefone">
+                                    <label for="telefone">Telefone</label>
+                                    <input type="tel" class="form-control" id="telefone" placeholder="telefone">
                                     </div>
                                 </div>
 
                                 <div class="form-group">
-                                    <label for="nome">Email</label>
-                                    <input type="text" class="form-control" id="nome" placeholder="Nome Completo">
+                                    <label for="email">E-mail</label>
+                                    <input type="text" class="form-control" id="email" placeholder="E-mail">
                                 </div>
 
                                 <div class="form-row">
@@ -49,8 +57,8 @@
                                     </div>
                                     <div class="form-group col-md-6">
                                         <label for="exampleFormControlSelect1">Empresa</label>
-                                        <select class="form-control" id="exampleFormControlSelect1">
-                                        <option>Isis1</option>
+                                        <select class="form-control"  id="empresa">
+                                        <option value="label1">Isis1</option>
                                         <option>Isis2</option>
                                         <option>Isis3</option>
                                         <option>Isis4</option>
@@ -61,19 +69,19 @@
 
                                 <div class="form-row">
                                     <div class="form-group col-md-4">
-                                        <label for="inputCity">Facebook</label>
-                                        <input type="text" class="form-control" id="inputCity">
+                                        <label for="link1">Facebook</label>
+                                        <input type="text" class="form-control" id="link1">
                                     </div>
 
                                     <div class="form-group col-md-4">
-                                        <label for="inputCity">Instagram</label>
-                                        <input type="text" class="form-control" id="inputCity">
+                                        <label for="link2">Instagram</label>
+                                        <input type="text" class="form-control" id="link2">
                                     </div>
 
 
                                     <div class="form-group col-md-4">
-                                        <label for="inputCity">Linkdin</label>
-                                        <input type="text" class="form-control" id="inputCity">
+                                        <label for="link3">Linkdin</label>
+                                        <input type="text" class="form-control" id="link3">
                                     </div>
                                 </div>
                                 <div class="form-group">
@@ -99,11 +107,11 @@
                        <div class="div-info">
                           <img id="foto" src="https://i.stack.imgur.com/Hq8za.jpg" alt=""> 
                           <section id="texto">
-                              <h3>Jose catanão neto segundo araujo dasila</h3>
-                              <p><span>Cargo</span> | <span>empresa</span></p>
-                              <p>Departamento</p>
-                              <p>Telefone: <span>5165135</span></p>
-                              <p>Email: <span>51351</span></p>
+                              <h3 Id="Textnome"></h3>
+                              <p><span Id="Textcargo">Cargo</span> | <span  Id="Textempresa">empresa</span></p>
+                              <p >Dp: <span Id="Textdep"></span></p>
+                              <p>Telefone: <span  Id="Texttel"></span></p>
+                              <p>Email: <span Id="Textemail"></span></p>
                               <p>
                                   <span></span><i class="fab fa-facebook-square"></i></span>|
                                   <span><i class="fab fa-instagram-square"></i></span>|
@@ -124,6 +132,7 @@
 
      <!-- JavaScript (Opcional) -->
     <!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
+    <script src="script.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
