add novas funcionalidades

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
                         <div class="duplo-input">
                             <label for="empresa">Empresa</label>
                             <select class="form-control input"  id="empresa">
+                                <option >Empresa</option>
                                 <option value="LBV Sousa">LBV Sousa</option>
                                 <option value="Belo vale">Belo vale</option>
                                 <option value="LBV Jaguaribe">LBV Jaguaribe</option>
@@ -77,13 +78,13 @@
 
 
         <!--bloco assinatura-->
-        <section class="bloco-assi-tudo" id="foo">
+        <section class="bloco-assi-tudo">
 
             <section class="isis-retrato">
                 <img src="fotos/teste2.jpg"  alt="">
             </section>
 
-            <section id="assi-corpo">
+            <section class="assi-corpo"  id="foo">
                 <div id="foto-fun">
                     <img  id="foto" src="https://ipuc.pucminas.br/green/documentos/green/unknow_usr.png"  alt="">
                 </div>
