adicionando tabela e fotos

--- a/index.html
+++ b/index.html
@@ -85,10 +85,11 @@
             </section>
 
             <section class="assi-corpo"  id="foo">
+            <!--
                 <div id="foto-fun">
                     <img  id="foto" src="https://ipuc.pucminas.br/green/documentos/green/unknow_usr.png"  alt="">
                 </div>
-
+          
                 <div id="texto"> 
                     <h3 Id="Textnome">Nome completo</h3>
                     <p><span Id="Textcargo">Cargo</span> | <span  Id="Textempresa">Empresa</span></p>
@@ -96,6 +97,43 @@
                     <p>Telefone: <span  Id="Texttel"></span></p>
                     <p>Email: <span Id="Textemail"></span></p>
                 </div>
+            -->
+
+
+            <table>
+                <tbody>
+                    <tr>
+                        <td><img id="foto" src="https://i.stack.imgur.com/Hq8za.jpg" alt="" /></td>
+                        <td id="bloco-texto">
+                            <div class="texto">
+                                <h3 Id="Textnome">José catanão neto segundo da silva</h3>
+                                <p><span Id="Textcargo">Cargo</span></p>
+                                <p><span Id="Textdep">dep</span> | <span  Id="Textempresa">Empresa</span></p>
+                            </div>
+                        </td>
+                        <td class="texto-mais">
+                            <p><img src="fotos/icontel.png" alt=""> <span  Id="Texttel"></span>895565525</p>
+                            <p><img src="fotos/iconemail.png" alt=""> <pan Id="Textemail">hthrhdfhfdh</span></p>
+                            <p><img src="fotos/iconlink.png" alt=""> www.saborisis.com.br</p>
+                            <p><img src="fotos/iconloc.png" alt=""> Rua Manoel Celestino de Paula, 101
+                                Várzea da Cruz - Sousa - Paraíba</p>
+                        </td>
+                    </tr>
+        
+                    <tr>
+                        <td id="logos"style="" colspan="3" >
+                            <a href="http://www.saborisis.com.br/"><img id="logoisis" src="fotos/logo.png" alt=""></a>
+                            <a href="https://www.facebook.com/saborisis/"><img id="logoface" src="fotos/logoface.png" alt=""></a>
+                            <a href="https://www.instagram.com/saborisis/"><img id="logoinsta" src="fotos/logoinsta.png" alt=""></a>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+
+
+
+
+
             </section>
 
             <section class="isis-retrato">
