add assinatura formatada

--- a/index.html
+++ b/index.html
@@ -106,14 +106,14 @@
                         <td><img id="foto" src="https://i.stack.imgur.com/Hq8za.jpg" alt="" /></td>
                         <td id="bloco-texto">
                             <div class="texto">
-                                <h3 Id="Textnome">José catanão neto segundo da silva</h3>
+                                <h3 Id="Textnome">Nome completo</h3>
                                 <p><span Id="Textcargo">Cargo</span></p>
                                 <p><span Id="Textdep">dep</span> | <span  Id="Textempresa">Empresa</span></p>
                             </div>
                         </td>
                         <td class="texto-mais">
-                            <p><img src="fotos/icontel.png" alt=""> <span  Id="Texttel"></span>895565525</p>
-                            <p><img src="fotos/iconemail.png" alt=""> <pan Id="Textemail">hthrhdfhfdh</span></p>
+                            <p><img src="fotos/icontel.png" alt=""> <span  Id="Texttel"></span></p>
+                            <p><img src="fotos/iconemail.png" alt=""> <pan Id="Textemail"></span></p>
                             <p><img src="fotos/iconlink.png" alt=""> www.saborisis.com.br</p>
                             <p><img src="fotos/iconloc.png" alt=""> Rua Manoel Celestino de Paula, 101
                                 Várzea da Cruz - Sousa - Paraíba</p>
