trocando os campos telefone e cargo

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
                         </div>
                         
                         <div class="duplo-input">
-                            <label for="telefone">Telefone</label>
-                            <input type="tel"  id="telefone" placeholder="telefone">
+                            <label for="cargo">Cargo</label>
+                            <input type="text"  id="cargo" placeholder="Cargo">
                         </div>   
                     </div>
 
@@ -50,8 +50,8 @@
                     <div class="bloco-input-duplo">
 
                         <div class="duplo-input">
-                            <label for="cargo">Cargo</label>
-                            <input type="text"  id="cargo" placeholder="Cargo">
+                            <label for="telefone">Telefone</label>
+                            <input type="tel"  id="telefone" placeholder="telefone">
                         </div>
 
                         <div class="duplo-input">
@@ -67,7 +67,7 @@
 
                     </div>
 
-                    <button class="btn" data-clipboard-target="#foo">
+                    <button onclick="alerta()" class="btn" data-clipboard-target="#foo">
                         Gerar Assiantura
                     </button>
 
